--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
           CIBW_ARCHS_LINUX: "auto aarch64"
           # Install deps in the docker container for Linux builds
           CIBW_BEFORE_ALL_LINUX: "yum install -y cairo-devel pango-devel pkgconfig || apt-get install -y libcairo2-dev libpango1.0-dev pkg-config"
+          # Repair wheels to bundle libraries (zero dependencies!)
+          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
 
       - uses: actions/upload-artifact@v4
         with:
