--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,17 +29,23 @@ jobs:
         run: |
           brew install cairo pango pkg-config
 
+      - name: Install dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          vcpkg install cairo pango --triplet=x64-windows
+          echo "PKG_CONFIG_PATH=$env:VCPKG_INSTALLATION_ROOT\installed\x64-windows\lib\pkgconfig" >> $env:GITHUB_ENV
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
         env:
-          # Don't test on Windows for now as setting up cairo/pango is hard
-          CIBW_SKIP: "*-win32 *-win_amd64 pp*"
+          CIBW_SKIP: "pp*"
           CIBW_ARCHS_LINUX: "auto aarch64"
           # Install deps in the docker container for Linux builds
           CIBW_BEFORE_ALL_LINUX: "yum install -y cairo-devel pango-devel pkgconfig || apt-get install -y libcairo2-dev libpango1.0-dev pkg-config"
           # Repair wheels to bundle libraries (zero dependencies!)
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
+          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
 
       - uses: actions/upload-artifact@v4
         with:
