--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,14 +40,7 @@ jobs:
             cd ..
           )
 
-      - name: Install dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          # Try Chocolatey first
-          choco install cairo pango pkgconfig || (
-            # Fallback: build from source (using MSYS2 or similar)
-            echo "Building from source on Windows - may require MSYS2 setup"
-          )
+      # Windows dependencies handled in CIBW_BEFORE_ALL_WINDOWS
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
