Fix Windows before_all script to build from source directly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,24 +65,24 @@ jobs:
               make -j$(nproc) && make install &&
               cd ..
             )
-          # Build headless Cairo/Pango on Windows
+          # Build headless Cairo/Pango on Windows from source
           CIBW_BEFORE_ALL_WINDOWS: |
-            # Use MSYS2 pacman to install build deps, then build from source
-            pacman -S --noconfirm --needed mingw-w64-x86_64-gcc mingw-w64-x86_64-pkg-config mingw-w64-x86_64-libpng mingw-w64-x86_64-freetype mingw-w64-x86_64-fontconfig mingw-w64-x86_64-glib2 mingw-w64-x86_64-gettext mingw-w64-x86_64-libffi mingw-w64-x86_64-pcre2 mingw-w64-x86_64-zlib wget tar xz || (
-              # Fallback: download and build
-              wget https://cairographics.org/releases/cairo-1.18.0.tar.xz &&
-              tar xf cairo-1.18.0.tar.xz &&
-              cd cairo-1.18.0 &&
-              ./configure --prefix=/usr/local --disable-xlib --disable-gl --disable-xcb --enable-png=yes --enable-ft=yes --host=x86_64-w64-mingw32 &&
-              make -j$(nproc) && make install &&
-              cd .. &&
-              wget https://download.gnome.org/sources/pango/1.50/pango-1.50.14.tar.xz &&
-              tar xf pango-1.50.14.tar.xz &&
-              cd pango-1.50.14 &&
-              ./configure --prefix=/usr/local --without-x --host=x86_64-w64-mingw32 &&
-              make -j$(nproc) && make install &&
-              cd ..
-            )
+            # Install build tools
+            pacman -S --noconfirm --needed mingw-w64-x86_64-gcc mingw-w64-x86_64-pkg-config wget tar xz make
+            # Download and build Cairo
+            wget https://cairographics.org/releases/cairo-1.18.0.tar.xz
+            tar xf cairo-1.18.0.tar.xz
+            cd cairo-1.18.0
+            ./configure --prefix=/usr/local --disable-xlib --disable-gl --disable-xcb --enable-png=yes --enable-ft=yes --host=x86_64-w64-mingw32
+            make -j$(nproc) && make install
+            cd ..
+            # Download and build Pango
+            wget https://download.gnome.org/sources/pango/1.50/pango-1.50.14.tar.xz
+            tar xf pango-1.50.14.tar.xz
+            cd pango-1.50.14
+            ./configure --prefix=/usr/local --without-x --host=x86_64-w64-mingw32
+            make -j$(nproc) && make install
+            cd ..
           # Repair wheels to bundle libraries (zero dependencies!)
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
