--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,23 +48,21 @@ jobs:
         env:
           CIBW_SKIP: "pp* *-musllinux*"
           CIBW_ARCHS_LINUX: "x86_64 i686"
-          # Fix CentOS 7 EOL mirrors then build headless Cairo/Pango
+          # Build headless Cairo/Pango from source (required to avoid OpenGL segfaults)
           CIBW_BEFORE_ALL_LINUX: |
-            sed -i 's|^mirrorlist=|#mirrorlist=|g' /etc/yum.repos.d/CentOS-* && sed -i 's|^#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && yum install -y cairo-devel pango-devel pkgconfig || (
-              apt-get update && apt-get install -y build-essential wget pkg-config libpng-dev libfreetype6-dev libfontconfig1-dev libglib2.0-dev libffi-dev libpcre2-dev zlib1g-dev &&
-              wget https://cairographics.org/releases/cairo-1.18.0.tar.xz &&
-              tar xf cairo-1.18.0.tar.xz &&
-              cd cairo-1.18.0 &&
-              ./configure --prefix=/usr/local --disable-xlib --disable-gl --disable-xcb --enable-png=yes --enable-ft=yes &&
-              make -j$(nproc) && make install &&
-              cd .. &&
-              wget https://download.gnome.org/sources/pango/1.50/pango-1.50.14.tar.xz &&
-              tar xf pango-1.50.14.tar.xz &&
-              cd pango-1.50.14 &&
-              ./configure --prefix=/usr/local --without-x &&
-              make -j$(nproc) && make install &&
-              cd ..
-            )
+            apt-get update && apt-get install -y build-essential wget pkg-config libpng-dev libfreetype6-dev libfontconfig1-dev libglib2.0-dev libffi-dev libpcre2-dev zlib1g-dev &&
+            wget https://cairographics.org/releases/cairo-1.18.0.tar.xz &&
+            tar xf cairo-1.18.0.tar.xz &&
+            cd cairo-1.18.0 &&
+            ./configure --prefix=/usr/local --disable-xlib --disable-gl --disable-xcb --enable-png=yes --enable-ft=yes &&
+            make -j$(nproc) && make install &&
+            cd .. &&
+            wget https://download.gnome.org/sources/pango/1.50/pango-1.50.14.tar.xz &&
+            tar xf pango-1.50.14.tar.xz &&
+            cd pango-1.50.14 &&
+            ./configure --prefix=/usr/local --without-x &&
+            make -j$(nproc) && make install &&
+            cd ..
           # Build headless Cairo/Pango on Windows from source
           CIBW_BEFORE_ALL_WINDOWS: |
             pacman -S --noconfirm --needed mingw-w64-x86_64-gcc mingw-w64-x86_64-pkg-config curl tar make
