--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ dev = [
     "pytest>=8.3.3",
     "imgrs>=0.2.10"
 ]
+pil = [
+    "pillow>=10.0.0"
+]
+imgrs = [
+    "imgrs>-0.3.0"
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
