--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
         env:
           CIBW_SKIP: "pp* *-musllinux*"
           CIBW_ARCHS_LINUX: "x86_64 i686"
+          CIBW_ARCHS_MACOS: "x86_64"
           # Build headless Cairo/Pango from source (required to avoid OpenGL segfaults)
           CIBW_BEFORE_ALL_LINUX: |
             apt-get update && apt-get install -y build-essential wget pkg-config libpng-dev libfreetype6-dev libfontconfig1-dev libglib2.0-dev libffi-dev libpcre2-dev zlib1g-dev &&
